did some styling, still need to fix the scrolling thing for overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,14 +68,32 @@ video {
 
 .maintable {
   width: 100%;
+  max-height: 89%;
 }
 
 .main {
   width: 50%;
+  max-height: 89%;
   position: absolute;
   margin-top: 2.5%;
   margin-left: 25%;
 }
+
+/*stuff table*/
+.content {}
+.stuff {}
+.stuffheader {}
+.aboutheader {}
+.abouttext {}
+.infoheader {}
+.infotext {}
+.stuffcontent {}
+.aboutcontent {}
+.infocontent {}
+.newsheader {}
+.diagnosticsheader {}
+.newscontent {}
+.diagnosticscontent {}
 
 /*sidenav table*/
 .sidenavtable, .sidenavrow, .timerow {
